--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     
-    <title>Web Rádio - IFRN SPP</title>
+    <title>RÁDIO - IFRN SPP</title>
 </head>
 <body>
 
@@ -24,10 +23,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#programas">Programas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
@@ -40,8 +39,56 @@
         </div>
       </nav>
 
+    <!--PLAYER of canvas-->
+      <section id="inicio">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h1>Player</h1>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    
+      <section id="programas">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h1>Programas</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="calendario">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h1>Calendario</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="Sobre">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h1>Sobre</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="calendario">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h1>Calendario</h1>
+            </div>
+          </div>
+        </div>
+      </section>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
