--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Rádio IFRN-SPP</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,10 +29,10 @@
                 <a class="nav-link" href="#programas">Programas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Pedidos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="login.html">login</a>
               </li>
             </ul>
           </div>
@@ -40,10 +40,20 @@
       </nav>
 
     <!--PLAYER of canvas-->
+
+
+
+
+
+
+    <!-- Sections -->
       <section id="inicio">
         <div class="container">
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
+              <h1>Player</h1>
+            </div>
+            <div class="col-6">
               <h1>Player</h1>
             </div>
           </div>
@@ -70,7 +80,7 @@
         </div>
       </section>
 
-      <section id="Sobre">
+      <section id="sobre">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -80,16 +90,22 @@
         </div>
       </section>
 
-      <section id="calendario">
+      <section id="pedidos">
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1>Calendario</h1>
+              <h1>pedidos</h1>
             </div>
           </div>
         </div>
       </section>
 
+
+
+
+     
+    <script src="https://cdn.jsdelivr.net/npm/howler@2.2.3/dist/howler.min.js"></script>
+  
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
