--- a/index.html
+++ b/index.html
@@ -14,47 +14,57 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Rádio IFRN-SPP</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#programas">Programas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pedidos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">login</a>
+    <nav class="navbar navbar-dark bg-transparent fixed-top navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="#">Rádio IFRN-SPP</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li>
+                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#programas">Programas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#sobre">Sobre</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#pedidos">Pedidos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="login.html">login</a>
+                </li>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 
     <!--PLAYER of canvas-->
+    <div class="container">
+      <div class="row">
+        <div class="col-12 fixed-bottom" id="playbar">
 
 
-
-
-
+        </div>
+      </div>
+    </div>
 
     <!-- Sections -->
       <section id="inicio">
         <div class="container">
           <div class="row">
-            <div class="col-6">
-              <h1>Player</h1>
-            </div>
-            <div class="col-6">
-              <h1>Player</h1>
+            <div class="col-12">
+              <h1>INicio</h1>
             </div>
           </div>
         </div>
