feat: desisto dessa versão, vo fazer outra

--- a/desisto dessa ver/index.html
+++ b/desisto dessa ver/index.html
@@ -56,9 +56,9 @@
     <!--PLAYER of canvas-->
     <div class="container">
       <div class="row">
-        <div class="col-12 fixed-bottom" id="playbar">
-
-
+        <div class="col-12 fixed-bottom justify-content-start" id="playbar">
+          <a href="https://music.youtube.com/watch?v=hE_Awm5NvGw&si=isMxtvoqlAuDIZDB"><img class="player m-2" src="img/play.png" alt=""></a>
+          <a href="https://music.youtube.com/watch?v=hE_Awm5NvGw&si=isMxtvoqlAuDIZDB"><img class="player" src="img/play.png" alt=""></a>
         </div>
       </div>
     </div>
