feat: sei nem se ta certo mesmo scr, mas se continuar assim vdc

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="body-pd">
     <header class="header" id="header">
         <div class="header_toggle">
-            <i class='bx bx-menu' id="header-toggler"></i>
+            <i class='bx bx-menu' style='color:#f7f4f4' id="header-toggler"></i>
         </div>
 
         <div class="header_img">
@@ -37,7 +37,7 @@
             </a>
 
             <div class="nav_list">
-                <a href="#" class="nav_link active">
+                <a href="#inicio" class="nav_link active">
                     <i class='bx bx-home-alt nav_icon'></i>
                     <span class="nav_name">Inicio</span>
                 </a>
@@ -47,7 +47,7 @@
                     <span class="nav_name">Programação</span>
                 </a>
 
-                <a href="#" class="nav_link">
+                <a href="#programas" class="nav_link">
                     <i class='bx bxs-microphone-alt nav_icon'></i>
                     <span class="nav_name">Programas</span>
                 </a>
@@ -71,10 +71,24 @@
         </nav>
     </div>
 
-    <h1>components</h1>
+    <section id="inicio">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+            </div>
+          </div>
+        </div>
+      </section>
 
-
-
+      <section id="programas">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h1>Programas</h1>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
