feat: sei nem mais o q eu to fazendo 'kurapica ta sentindo um vazio enorme...'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <div class="header_img">
             <img src="assets/img/pfp.jpg" alt="">
         </div>
+
     </header>
+
     <!-- Sidebar -->
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
@@ -42,7 +44,7 @@
                     <span class="nav_name">Inicio</span>
                 </a>
 
-                <a href="#" class="nav_link">
+                <a href="#programacao" class="nav_link">
                     <i class='bx bx-spreadsheet nav_icon'></i>
                     <span class="nav_name">Programação</span>
                 </a>
@@ -71,26 +73,39 @@
         </nav>
     </div>
 
-    <section id="inicio">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-12">
+
+    <!-- SECTIONS FDP-->
+
+
+
+        <section id="inicio">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12">
+
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="programas">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h1>Programas</h1>
+          </section>
+    
+          <section id="programacao" class="section-config">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12">
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </section>
-
-
+          </section>
+    
+          <section id="programas" class="section-config">
+            <div class="container">
+              <div class="row">
+                <div class="col-12">
+                </div>
+              </div>
+            </div>
+          </section> 
+    </div>
 
 
 
