feat: acho q assim poderia ficar interessante

--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
             <i class='bx bx-menu' style='color:#f7f4f4' id="header-toggler"></i>
         </div>
 
+        <div class="container-fluid">
+          <div>
+            <i class="bx bx-play" style='color: #f7f4f4; font-size: 3em;'></i>
+          </div>
+        </div>
+
         <div class="header_img">
             <img src="assets/img/pfp.jpg" alt="">
         </div>
+
+
 
     </header>
 
