feat: é um pequeno avanço, agr esse play toca

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
             <i class='bx bx-menu' style='color:#f7f4f4' id="header-toggler"></i>
         </div>
 
-        <div class="container playbody">
+        <div class="container-fluid playbody">
           <div class="row">
             <div class="col">
               <div>
-                <audio src="assets/musica/Dragão Negro - Jubarte Ataca.mp3"></audio>
+                <audio id="player" src="assets/musica/Dragão Negro - Jubarte Ataca.mp3"></audio>
 
                 <div class="player">
                   
                   <div class="control">
-                    <i class="bx bx-play" style='color: #f7f4f4; font-size: 1.8em;'></i>
+                    <i class="bx bx-play" style='color: #f7f4f4;' id="playbtn"></i>
                   </div>
                 
                   <div class="info">Dragão Negro - Jubarte Ataca                   
-                  <div class="bar">
-                    <div id="progress"></div>
+                    <div class="bar">
+                      <div id="progress"></div>
+                    </div>
                   </div>
-                </div>
 
                   <div id="current">0:00</div>
 
