feat: fingir q ta do jeito q quero antes q eu pretenda mudar tudo dnv

--- a/index.html
+++ b/index.html
@@ -96,9 +96,19 @@
                     <span class="nav_name">Pedidos</span>
                 </a>
 
+                <a href="#" class="nav_link">
+                  <img src="assets/img/pfp.jpg" class="header_img" alt="">                  
+                <span class="nav_name">Usuario</span>
+                </a>
+
                 <div class="header_img">
-                  <img src="assets/img/pfp.jpg" alt="">
+                  
                 </div>
+
+                <!--                
+                  <div class="header_img">
+                    <img src="assets/img/pfp.jpg" alt="">
+                  </div>-->
 
             </div>
         </nav>
