--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-12">
+                <h1>Mural</h1>
+ 
+
+                <!--CARDS-->
+
+
+
               </div>
             </div>
           </div>
